Fixed problem where title would push onto next line if URL was too long

--- a/ChromeExtension/assets/css/main.css
+++ b/ChromeExtension/assets/css/main.css
@@ -39,9 +39,9 @@ img {
   margin: 0;
 }
 
-.title .page-title {
+.title .page-title, .title .url {
   display: block;
-  width: 300px;
+  width: 370px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
